# Master-Thesis-Project

./: README.md
DLO_detection/: README.md
DLO_detection/aruco_orientation/: README.md  aruco_config.py  aruco_detection_filtered.py  aruco_trackbars.py  aruco_vision.py  hsv_tuner.py
DLO_detection/launch/: detection_pipeline.launch
DLO_detection/scripts/: README.md  aruco_main.py  params_v2.json
NIST_BT/: CMakeLists.txt  forward.dot  inverse.dot  package.xml  setup.py
NIST_BT/src/: Clip_seq.py  Forward_seq.py  Inverse_seq.py  Path_seq.py  clip_seq.dot  forward.dot  inverse.dot  path.dot
aidin_ros/: CMakeLists.txt  README.md
aidin_ros/launch/: FT_AIDIN.launch  (+2 more)
dhb_ros-General/: CMakeLists.txt  package.xml  setup.py
dhb_ros-General/action/: DHBAction.action
dhb_ros-General/data/dhb/: generated_traj_dhb_vel_approach_cable_2_ee_velocities.npz  generated_traj_dhb_vel_approach_cable_3_ee_velocities.npz  generated_traj_dhb_vel_approach_cable_ee_velocities.npz  generated_traj_dhb_vel_approach_clip_2_ee_velocities.npz  generated_traj_dhb_vel_approach_clip_3_ee_velocities.npz  generated_traj_dhb_vel_approach_clip_ee_velocities.npz  generated_traj_dhb_vel_close_clip_2_ee_velocities.npz  generated_traj_dhb_vel_close_clip_3_ee_velocities.npz  generated_traj_dhb_vel_close_clip_ee_velocities.npz  generated_traj_dhb_vel_lock_clip_2_ee_velocities.npz  generated_traj_dhb_vel_lock_clip_3_ee_velocities.npz  generated_traj_dhb_vel_lock_clip_ee_velocities.npz  generated_traj_dhb_vel_put_in_clip_2_ee_velocities.npz  generated_traj_dhb_vel_put_in_clip_3_ee_velocities.npz  generated_traj_dhb_vel_put_in_clip_ee_velocities.npz  generated_traj_dhb_vel_starting_point_2_ee_velocities.npz  generated_traj_dhb_vel_starting_point_3_ee_velocities.npz  generated_traj_dhb_vel_starting_point_ee_velocities.npz
dhb_ros-General/data/dmp/: T_drop_cable_pos1_dmp.npz  T_grab_cable_pos1_dmp.npz  clip_closure_pos1_dmp.npz  clip_closure_pos1_r2_dmp.npz  clip_closure_pos1_r3_dmp.npz  clip_closure_pos1_r4_dmp.npz  clip_closure_pos2_dmp.npz  clip_opening_pos1_dmp.npz  clip_opening_pos1_r2_dmp.npz  clip_opening_pos2_dmp.npz  locking_pos1_dmp.npz  locking_pos1_r2_dmp.npz  locking_pos2_dmp.npz  locking_pos2_r2_dmp.npz  pickUp_pos1_dmp.npz  push_pos1_dmp.npz  push_pos1_r2_dmp.npz  shaka_dmp.npz  thread_pos1_dmp.npz  thread_pos1_r2_dmp.npz  unlocking_pos1_dmp.npz  unlocking_pos2_dmp.npz
dhb_ros-General/data/velocities/: approach_cable_2_ee_velocities.npz  approach_cable_3_ee_velocities.npz  approach_cable_ee_velocities.npz  approach_clip_2_ee_velocities.npz  approach_clip_3_ee_velocities.npz  approach_clip_ee_velocities.npz  close_clip_2_ee_velocities.npz  close_clip_3_ee_velocities.npz  close_clip_ee_velocities.npz  lock_clip_2_ee_velocities.npz  lock_clip_3_ee_velocities.npz  lock_clip_ee_velocities.npz  put_in_clip_2_ee_velocities.npz  put_in_clip_3_ee_velocities.npz  put_in_clip_ee_velocities.npz  starting_point_2_ee_velocities.npz  starting_point_3_ee_velocities.npz  starting_point_ee_velocities.npz
dhb_ros-General/launch/: run_all.launch
dhb_ros-General/scripts/: computeDHB.py  dhb_action_server.py  dhb_learn.py  dhb_learn_vel_npz.py  mainDHB.py  orientation_test.py  plots_traj.py
dhb_ros-General/src/dhb_ros/: dhb.py  reconstructTrajectory.py  utils_dhb.py
dmp_ros/: CMakeLists.txt  README.md  package.xml  setup.py
dmp_ros/config/: dmp_learn.yaml  dmp_play.yaml
dmp_ros/data/new/: _2024-09-02-11-54-48.bag
dmp_ros/launch/: LearnDMP_old.launch  PlayDMP.launch  PlayDMPBuildBot.launch  record.launch
dmp_ros/scripts/: dmp_learn.py  dmp_learn_BuildBot.py  dmp_learn_segmented.py  dmp_play.py  dmp_play_BuildBot.py  dmp_play_segment.py  dmp_play_segment_v2.py  dmp_play_step_v2.py  dmp_play_step_v3.py  process_data.py
dmp_ros/src/dmp_ros/: Gripper.py  send_traj.py  spiral_search.py
franka_interactive_controllers/: CMakeLists.txt  README.md  franka_interactive_controllers_plugin.xml
launch/: PlayDHB.launch
nist_cables/: CMakeLists.txt  package.xml
nist_description/: CMakeLists.txt  package.xml
record_franka_ros/: CMakeLists.txt  package.xml  setup.py
record_franka_ros/launch/: gravity_comp_wGripper.launch  record.launch  start_usb_cam.launch  startup.launch
record_franka_ros/scripts/: buttons_ctrl.py  get_ee_pose_vel.py  ours_alignment.npz  ours_approach_cable.npz  ours_closeclip.npz  ours_flip.npz  ours_grabclip.npz  ours_insert.npz  ours_insert_tube.npz  ours_insert_tube_2.npz  ours_lift_cable.npz  ours_look.npz  ours_look_2.npz  ours_lower.npz  ours_pick.npz  ours_push.npz  ours_raise.npz  ours_step_back.npz  ours_unlockclip_up.npz  ours_view_clip.npz  postprocess_rec.py  setup_cameras.sh  setup_usb_cam.sh
record_franka_ros/src/record_franka_ros/: Gripper.py
record_teleop/: CMakeLists.txt  package.xml
scripts/: calc_ee_pose_vel.py  dhb_action_client.py  dhb_learn_npz.py  dhb_play.py  dhb_play_trasl.py  dhb_play_trasl_orient.py  get_ee_pose_vel.py  keys_check.py
(+130 files in other folders)
