<?xml version="1.0"?>
<package format="2">
  <name>dhb_ros</name>
  <version>0.0.0</version>
  <description>DHB ROS</description>

  <maintainer email="asl_team@todo.todo">asl_team</maintainer>

  <license>TODO</license>

  <!-- Dipendenze generali -->
  <depend>roslaunch</depend>
  <depend>franka_example_controllers</depend>

  <!-- Dipendenze di build -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>franka_msgs</build_depend>
  <build_depend>cartesian_control_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>  <!-- Aggiungi actionlib_msgs -->
  <build_depend>message_generation</build_depend> <!-- Aggiungi message_generation -->

  <!-- Dipendenze di export per la build -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend> <!-- Aggiungi actionlib_msgs -->

  <!-- Dipendenze di esecuzione -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>franka_msgs</exec_depend>
  <exec_depend>cartesian_control_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend> <!-- Aggiungi actionlib_msgs -->
  <exec_depend>message_runtime</exec_depend> <!-- Aggiungi message_runtime -->

  <export>
    <!-- Altri elementi di export, se necessari -->
  </export>
</package>
